@@ -7,8 +7,10 @@ apport (0.101) UNRELEASED; urgency=low
     any more (reproducing LP #185084).
   * apport/ui.py, run_crash(): Do not reject reports which have a stack trace,
     but no core dump. (LP: #185084)
+  * apport/report.py: Fix test_add_gdb_info_load() test case, the temporary
+    executable was already deleted when gdb ran the second time.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 22 Jan 2008 14:46:09 +0000
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 23 Jan 2008 17:48:06 +0000
 
 apport (0.100) hardy; urgency=low
 
